aggiunto la parte del server anche su docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,15 @@ services:
         - ./client:/app
       ports:
         - 4200:4200
+    
+  server:
+      build:
+        dockerfile: Dockerfile
+        context: ./server
+      volumes:
+       
+        #Qui mappa tutto il contenuto della cartella locale client nella cartella app dell'immagine
+        #Ricorda che la WORKDIR dell'immagine è la cartella app
+        - ./server:/app
+      ports:
+        - 5000:5000
