--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,10 @@ services:
       build:
         dockerfile: Dockerfile
         context: ./server
+      environment:            
+        - MONGO_INITDB_DATABASE=animal_db
+        - MONGO_INITDB_ROOT_USERNAME=root
+        - MONGO_INITDB_ROOT_PASSWORD=pass
       volumes:
        
         #Qui mappa tutto il contenuto della cartella locale client nella cartella app dell'immagine
@@ -25,6 +29,7 @@ services:
         - ./server:/app
       ports:
         - 5000:5000
+      
 
   mongo-server:
     image: mongo:latest     #Possiamo specificare 'immagine anche da qui senza usare un Dockerfile
